# AsynGyanis

./: .clang-format  .gitignore  CMakeLists.txt  CMakePresets.json  CONTRIBUTING.md  README.md  conan_provider.cmake  conandata.yml  conanfile.py
.claude/: settings.json  settings.local.json
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  SECURITY.md  dependabot.yml  labeler.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: auto-assign.yml  ci.yml  codeql.yml  labeler.yml  release.yml
docs/Base/: AsyncEventLoop-API.md  ConfigFileWatcher-API.md  ConfigManager-API.md  ConfigType-API.md  ConfigValue-API.md  Exception-API.md  IOUringContext-API.md  LogCommon-API.md  LogSink-API.md  Logger-API.md  LoggerConfig-API.md
docs/Core/: AsyncSocket-API.md  BufferPool-API.md  Cancelable-API.md  Connection-API.md  ConnectionManager-API.md  CoroutinePool-API.md  Epoll-API.md  EpollAwaiter-API.md  EventLoop-API.md  InetAddress-API.md  IoContext-API.md  README.md  Scheduler-API.md  Task-API.md  ThreadPool-API.md  Timer-API.md  TlsContext-API.md  TlsSocket-API.md
samples/: CMakeLists.txt  README.md  benchmark.sh  main.cpp
src/: CMakeLists.txt
src/Base/: CMakeLists.txt  Config.h  ConfigFileWatcher.cpp  ConfigFileWatcher.h  ConfigManager.cpp  ConfigManager.h  ConfigType.cpp  ConfigType.h  ConfigValue.cpp  ConfigValue.h  Exception.cpp  Exception.h  Expection.cpp  Expection.h  IOUringContext.cpp  IOUringContext.h  LogCommon.h  LogSink.cpp  LogSink.h  Logger.cpp  Logger.h  LoggerConfig.cpp  LoggerConfig.h
src/Core/: AsyncSocket.cpp  AsyncSocket.h  BufferPool.cpp  BufferPool.h  CMakeLists.txt  Cancelable.h  Connection.cpp  Connection.h  ConnectionManager.cpp  ConnectionManager.h  CoroutinePool.cpp  CoroutinePool.h  Epoll.cpp  Epoll.h  EpollAwaiter.h  EventLoop.cpp  EventLoop.h  InetAddress.cpp  InetAddress.h  IoContext.cpp  IoContext.h  Scheduler.cpp  Scheduler.h  Task.h  ThreadPool.cpp  ThreadPool.h  Timer.cpp  Timer.h  TlsContext.cpp  TlsContext.h  TlsSocket.cpp  TlsSocket.h  Uring.cpp  Uring.h  UringAwaiter.cpp  UringAwaiter.h
src/Net/: CMakeLists.txt  FileSender.cpp  FileSender.h  HttpParser.cpp  HttpParser.h  HttpRequest.cpp  HttpRequest.h  HttpResponse.cpp  HttpResponse.h  HttpServer.cpp  HttpServer.h  HttpSession.cpp  HttpSession.h  HttpsServer.cpp  HttpsServer.h  HttpsSession.cpp  HttpsSession.h  InetAddress.h  Middleware.h  Router.cpp  Router.h  StreamBuffer.h  TcpAcceptor.cpp  TcpAcceptor.h  TcpServer.cpp  TcpServer.h  TcpStream.cpp  TcpStream.h
tests/: CMakeLists.txt  TestHelpers.h
tests/Base/: CMakeLists.txt  TestAsyncEventLoop.cpp  TestConfigFileWatcher.cpp  TestConfigManager.cpp  TestConfigType.cpp  TestConfigValue.cpp  TestException.cpp  TestIOUringContext.cpp  TestLogCommon.cpp  TestLogSink.cpp  TestLogger.cpp  TestLoggerConfig.cpp
tests/Core/: CMakeLists.txt  TestAsyncSocket.cpp  TestBufferPool.cpp  TestCancelable.cpp  TestConnection.cpp  TestConnectionManager.cpp  TestCore.cpp  TestCoroutinePool.cpp  TestEpoll.cpp  TestEventLoop.cpp  TestInetAddress.cpp  TestIoContext.cpp  TestScheduler.cpp  TestTask.cpp  TestThreadPool.cpp  TestTimer.cpp  TestTlsContext.cpp  TestTlsSocket.cpp
